Module2 Assignment Solution

--- a/Module2-solution/index.html
+++ b/Module2-solution/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="CSS/styles.css"/>
+		<link rel="stylesheet" href="styles.css"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
