Module2 Assignment Solution

--- a/Module2-solution/index.html
+++ b/Module2-solution/index.html
@@ -1,47 +1,50 @@
+
 <html>
-	<head>
-		<link rel="stylesheet" href="styles.css"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
-		<!-- jQuery library -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Assignment Solution for Module 2</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-		<!-- Latest compiled JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-		<title>
-			Assignment Solution for Module 2
-		</title>
-	</head>
-	<body>
-		
-			<h1 class="h1"> Our Menu </h1>
-			<div class="row">
-				<div class="col-md-4 col-sm-6 col-lg-3">
-					<div class="head">
-						<h4 class="h4"> Chicken </h4>
-					</div>
-				<p>The pain itself is very important, and the growth of the adipiscing will be followed,
+<body>
+    <h1>Notable Mathematicians</h1>
+    <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <section class="lebesgue">
+                <h2>Chicken</h2>
+                <p>
+                    The pain itself is very important, and the growth of the adipiscing will be followed,
 				but at the same time it happens that there is a great deal of work and pain. For to come
 				to the smallest detail, no one should practice any kind of work unless he derives some
-				benefit from it.</p> </div>
-				<div class="col-md-4 col-sm-6 col-lg-3">
-					<div class="head1">
-						<h4 class="h4"> Beef </h4>
-					</div>
-				<p>The pain itself is very important, and the growth of the adipiscing will be followed,
+				benefit from it.
+                </p>
+            </section>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <section class="fubini">
+                <h2> Beef </h2>
+                <p>
+                    The pain itself is very important, and the growth of the adipiscing will be followed,
 				but at the same time it happens that there is a great deal of work and pain. For to come
 				to the smallest detail, no one should practice any kind of work unless he derives some
-				benefit from it. </p></div>
-				<div class="col-md-4 col-sm-6 col-lg-3">
-					<div class="head2">
-						<h4 class="h4"> Sushi </h4>
-					</div>
-				<p> The pain itself is very important, and the growth of the adipiscing will be followed,
+				benefit from it.
+                </p>
+            </section>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12">
+            <section class="luzin">
+                <h2>Sushi</h2>
+                <p>
+                    The pain itself is very important, and the growth of the adipiscing will be followed,
 				but at the same time it happens that there is a great deal of work and pain. For to come
 				to the smallest detail, no one should practice any kind of work unless he derives some
-				benefit from it. </p></div>
-			</div>
-	</body>
+				benefit from it.
+                </p>
+            </section>
+        </div>
+    </div>
+</body>
+
 </html>
